--- a/layouts/partials/widgets/github.enric2186.staff.html
+++ b/layouts/partials/widgets/github.enric2186.staff.html
@@ -43,7 +43,7 @@
     {{ if site.Params.avatar.gravatar }}
       {{ $src = printf "https://s.gravatar.com/avatar/%s?s=150" (md5 .Params.email) }}
     {{ else if $avatar }}
-      {{ $avatar_image := $avatar.Resize "550x" }}
+      {{ $avatar_image := $avatar.Fill "400x270 Center"}}
       {{ $src = $avatar_image.RelPermalink }}
     {{ end }}
     {{ if $src }}
