--- a/layouts/partials/widgets/github.enric2186.staff.html
+++ b/layouts/partials/widgets/github.enric2186.staff.html
@@ -40,10 +40,8 @@
   {{ end }}
   <div class="col-12 col-sm-auto people-person">
     {{ $src := "" }}
-    {{ if site.Params.avatar.gravatar }}
-      {{ $src = printf "https://s.gravatar.com/avatar/%s?s=150" (md5 .Params.email) }}
-    {{ else if $avatar }}
-      {{ $avatar_image := $avatar.Fill "400x270 Center"}}
+    {{ if $avatar }}
+      {{ $avatar_image := $avatar.Resize "x300"}}
       {{ $src = $avatar_image.RelPermalink }}
     {{ end }}
     {{ if $src }}
